cot-macros/tests/ui/func_query_double_op.stderr
error: expected field, literal, or identifier
  --> tests/ui/func_query_double_op.rs:16:29
   |
16 |         $name == "hello" && && $description == "world" || $visits == 0
   |                             ^^
